# TSim4CXL

./: LICENSE  README.md  prerequisite.sh
backplane/: CMakeLists.txt  sc_main.cpp
backplane/components/: Top.h  controller.cpp  controller.h  dsp.cpp  dsp.h  host.cpp  host.h  interconnector.cpp  interconnector.h  mem_wrapper.cpp  mem_wrapper.h  sim_wrapper.cpp  sim_wrapper.h  usp.cpp  usp.h
backplane/components/port/: dsp.cpp  dsp.h  usp.cpp  usp.h
backplane/components/wrapper/: mem_wrapper.cpp  mem_wrapper.h  sim_wrapper.cpp  sim_wrapper.h
backplane/configs/: memory.json  system.json
backplane/trace/llm/: d1.txt
backplane/trace/lmps/: d0.txt  d1.txt  r0.txt  r1.txt
backplane/utilities/: configurations.cpp  configurations.h  packet_buffer.h  shmem_communicator.cpp  shmem_communicator.h  sim_packet.h  statistics.cpp  statistics.h
cxlsim/: CMakeLists.txt
cxlsim/components/: configurations.h
cxlsim/trace/llm/: d0.txt
cxlsim/trace/lmps/: d1.txt
host/: Makefile  main.cpp  packetManager.cpp  packetManager.h  traceGenerator.cpp  traceGenerator.h
